discussion/kv_engine/169252/169252_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-37858: Introduce the seqno_persistence_timeout config param

That's the max duration (in seconds) after which a SeqnoPersistence
request is temp-failed.
Param's value validation is achieved within the EPConfig fixture.
The new param is dynamic and replaces the previously hard-coded value.
Default/min/max values for the new param keep the legacy values, so
there's no behaviour change with this patch.

Change-Id: I2cb2856c2ef7c96fd6e31a81b8adf7e485427a95

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-01-24 09:04:21.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-24 09:22:45.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15059/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:3006:27: error: return type of out-of-line definition of "KVBucket::setSeqnoPersisteTimeout" differs from that in the declaration [clang-diagnostic-error]
cb::engine_errc KVBucket::setSeqnoPersisteTimeout(size_t timeout) {
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.h:912:10: note: previous declaration is here
    void setSeqnoPersisteTimeout(size_t timeout);
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15059/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:3006:27:
error: return type of out-of-line definition of "KVBucket::setSeqnoPersisteTimeout" differs from that in the declaration [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15059/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43176/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kv_bucket.cc(3006): error C2556: "cb::engine_errc KVBucket::setSeqnoPersisteTimeout(size_t)": overloaded function differs only by return type from "void KVBucket::setSeqnoPersisteTimeout(size_t)" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43176/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36515/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kv_bucket.cc:3006:27:
error: return type of out-of-line definition of "KVBucket::setSeqnoPersisteTimeout" differs from that in the declaration
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36515/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15871/ : FAILURE

Compile error at [2022-01-24T09:16:44.695Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@5/kv_engine/engines/ep/src/kv_bucket.cc:3006:27:
error: return type of out-of-line definition of "KVBucket::setSeqnoPersisteTimeout" differs from that in the declaration
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15871/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4767/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17821/ : FAILURE

Compile error at [2022-01-24T09:16:44.128Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kv_bucket.cc:3006:27:
error: return type of out-of-line definition of "KVBucket::setSeqnoPersisteTimeout" differs from that in the declaration
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17821/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4705/ : FAILURE

Compile error at [2022-01-24T09:17:01.710Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kv_bucket.cc:3006:27:
error: return type of out-of-line definition of "KVBucket::setSeqnoPersisteTimeout" differs from that in the declaration
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4705/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25160/ : FAILURE

Compile error at [2022-01-24T09:16:01.263Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kv_bucket.cc:3006:27:
error: return type of out-of-line definition of "KVBucket::setSeqnoPersisteTimeout" differs from that in the declaration
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25160/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16747/ : FAILURE

Compile error at [2022-01-24T09:18:19.940Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kv_bucket.cc:3006:17:
error: no declaration matches ?cb::engine_errc KVBucket::setSeqnoPersisteTimeout(size_t)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16747/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17051/ : FAILURE

Compile error at [2022-01-24T09:18:12.022Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kv_bucket.cc:3006:17:
error: no declaration matches ?cb::engine_errc KVBucket::setSeqnoPersisteTimeout(size_t)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17051/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13904/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
